# loader

./: .gitignore  Makefile  efi.c  elf.c  elf.s  fs.c  loader.c  meson.build  print.c  virt.c
boot/: framebuffer.c  image.c  memory_map.c  rsdp.c
elf/: elf.asm  elf.c
fs/: open.c  read.c  utils.c
include/: elf.h  elf64.h  fs.h  loader.h  net.h  stdlib.h  string.h  uefi.h  virt.h
include/arpa/: inet.h
include/boot/: framebuffer.h  image.h  info.h  memory_map.h  rsdp.h
include/net/: ethernet.h
include/netboot/: bufpool.h  eth.h  icmp6.h  ip6.h  netboot.h  udp6.h
include/netinet/: in.h
include/uefi/: device-path.h  driver.h  init.h  io.h  util.h
lib/: vcbprintf.c
lib/stdlib/: free.c  malloc.c
lib/string/: memcpy.c
loader/: kernel.c  paging.c  parse.c
net/: bufpool.c  eth.c  icmp6.c  ip6.c  net.c  netboot.c  udp6.c  util.c
uefi/: device-path.c  driver.c  error.c  guid.c  init.c  io.c  ucs2.c  util.c
